--- a/indx.html
+++ b/indx.html
@@ -93,7 +93,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-             <video controls src="/vedio/weather.mp4" width="370" height="200" >
+             <video controls src="/vedio/weather.mp4" width="370" height="200" >`
                 </div>
                 <div class="project-info">
                     <p class="project-category">JavaScript(API)-HTML-CSS-Boostrap</p>
